; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/time/extr_snapmgr.c_SnapMgrShmemSize.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/time/extr_snapmgr.c_SnapMgrShmemSize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OldSnapshotControlData = common dso_local global i32 0, align 4
@xid_by_minute = common dso_local global i32 0, align 4
@old_snapshot_threshold = common dso_local global i64 0, align 8
@OLD_SNAPSHOT_TIME_MAP_ENTRIES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SnapMgrShmemSize() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @OldSnapshotControlData, align 4
  %3 = load i32, i32* @xid_by_minute, align 4
  %4 = call i32 @offsetof(i32 %2, i32 %3)
  store i32 %4, i32* %1, align 4
  %5 = load i64, i64* @old_snapshot_threshold, align 8
  %6 = icmp sgt i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %0
  %8 = load i32, i32* %1, align 4
  %9 = load i32, i32* @OLD_SNAPSHOT_TIME_MAP_ENTRIES, align 4
  %10 = call i32 @mul_size(i32 4, i32 %9)
  %11 = call i32 @add_size(i32 %8, i32 %10)
  store i32 %11, i32* %1, align 4
  br label %12

12:                                               ; preds = %7, %0
  %13 = load i32, i32* %1, align 4
  ret i32 %13
}

declare dso_local i32 @offsetof(i32, i32) #1

declare dso_local i32 @add_size(i32, i32) #1

declare dso_local i32 @mul_size(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
